--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "ESM 206 Assignment 4"
+title: "Spiny Lobster Abundance, Community Size Structure, and Fishing Pressure Along the Santa Barbara Coast (2012-2018)"
+subtitle: "ESM 206 Assignment 4"
 author: "Cameryn Brock and Allie Hacker"
 date: "11/17/2019"
 output: html_document
@@ -32,22 +33,22 @@ lobster_mpa <- lobster_tidy %>%
   mutate(mpa= ifelse(site %in% c("IVEE", "NAPL"), "MPA", "non-MPA" ))
 
 ```
-#### Introduction
+### Introduction
 
 To be written
 -purpose: investigate how MPA status effects lobster abundance and size
 
 ![California Spiny Lobster. Credit: [Catalina Island Marine Institute](https://cimioutdoored.org/ca-spiny-lobster/)](lobster_image.jpg)
 
-#### Data and Methods
+### Data and Methods
 
 California Spiny Lobster data were provided by the [Environmental Data Initiative](https://environmentaldatainitiative.org/). Lobster abundace (individuals) and size (mm) were determined by annual SCUBA surveys at five long term kelp forest research sites in the Santa Barbara Channel. Two of the sites, Isla Vista and Naples, were established as Marine Protected Areas (MPAs) in 2012. Data collection began in late summer of 2012 before the start of fishing season and is ongoing.
 
 Changes in lobster abundance and shifts in lobster size distribution from 2012 to 2018 were explored for each study site. Mean lobster size (mm) at MPA sites and non-MPA sites was compared for both 2012 and 2018 using two-sample t-tests (\alpha = 0.05). Mean lobster size in 2012 and 2018 was compared for MPA and non-MPA sites using two-sample t-tests. R software (version 3.5.1) and RStudio (version 1.2.1335) were used for data analysis and figure generation. 
 
-#### Results
+### Results
 
-##### 1. Changes in annual lobster abundance.
+#### 1. Changes in annual lobster abundance.
 
 California Spiny Lobster abundance increased from 2012 to 2018 at all five sampling locations. The two Marine Protected Area (MPA) sites (Isla Vista and Naples) had the lowest lobster abundance in 2012 and the greatest percent increase in lobster abundance from 2012 to 2018. The number of lobsters observed at Isla Vista increased 36-fold from 26 in 2012 to 946 in 2018. At Naples, lobster abundance increased 49-fold from 6 lobsters in 2012 to 298 in 2018. 
 
@@ -121,7 +122,7 @@ ggplot(lobster_abundance,
 
 ***Figure 1.** California Spiny Lobster abundance in the Santa Barbara Channel from 2012 to 2018. Sites shown in turquoise were established as Marine Protected Areas (MPAs) in 2012.*
 
-##### 2. Shifts in lobster size.
+#### 2. Shifts in lobster size distributions.
 
 ```{r, include = FALSE}
 # Mean Lobster size at MPA vs. non-MPA
@@ -202,7 +203,7 @@ non_mpa_size_effect
 
 ```
 
-Size distributions (Figure 2) and mean lobster size (Table 1) were compared for MPA and non-MPA sites in 2012 and 2018.
+Size distributions (Figure 2) were compared for all sites in 2012 and 2018. Most notably, the median for lobster size increased in MPA sites between 2012 and 2018. However, in non-MPA sites, the median size remained relatively the same during that time period.
 
 ```{r Part B: Shifts in lobster size distributions, message = FALSE, warning = FALSE, fig.asp = 7/20}
 
@@ -255,7 +256,9 @@ ggplot(data = lobster_size_dist, aes(x = size_mm,
 
 ***Figure 2.** California Spiny Lobster size distributions in the Santa Barbara Channel in 2012 and 2018. Sites shown in turquoise were established as Marine Protected Areas (MPAs) in 2012. White lines indicate the median lobster size for each facet.*
 
-Notably, mean lobster size in MPA sites was  larger in 2018 (77.6 ± 11.7mm, mean ± standard deviation) compared to in 2012 (67.4 ± 12.2mm)  and the increase was statistically significant with a large effect size (two-sample t-test, t (`r round(mpa_size_ttest$parameter, 0)`) = `r round(mpa_size_ttest$statistic, 1)`, p < 0.001, Cohen's d = `r round(mpa_size_effect$estimate, 2)`)). No significant change in mean lobster size was observed in sites that were not established as MPAs (Arroyo Quemado, Carpinteria, and Mohawk) between 2012 (74.9 ± 12.4mm) and 2018 (73.6 ± 10.1mm; two-sample t-test, t(`r round(non_mpa_size_ttest$parameter, 0)`) = `r round(non_mpa_size_ttest$statistic, 1)`, p = `r round(non_mpa_size_ttest$p.value, 2)`, Cohen's d = `r round(non_mpa_size_effect$estimate, 2)`).  
+#### 3. Mean lobster size in MPA and non_MPA sites.
+
+In addition to the lobster community size structure, mean lobster size was compared for MPA and non-MPA sites in 2012 and 2018 (Table 1).
 
 ***Table 1.** California Spiny Lobster mean size, standard deviation, and sample size for samples collected in MPA and non-MPA sites in 2012 and 2018. MPA sites include Isla Vista and Naples and non-MPA sites include Arroyo Quemado, Carpinteria, and Mohawk.*
 
@@ -313,15 +316,17 @@ kable(lobster_table_wide,
 
 ```
 
+Mean lobster size in MPA sites was  larger in 2018 (77.6 ± 11.7mm, mean ± standard deviation) compared to in 2012 (67.4 ± 12.2mm)  and the increase was statistically significant with a large effect size (two-sample t-test, t (`r round(mpa_size_ttest$parameter, 0)`) = `r round(mpa_size_ttest$statistic, 1)`, p < 0.001, Cohen's d = `r round(mpa_size_effect$estimate, 2)`)). No significant change in mean lobster size was observed in sites that were not established as MPAs (Arroyo Quemado, Carpinteria, and Mohawk) between 2012 (74.9 ± 12.4mm) and 2018 (73.6 ± 10.1mm; two-sample t-test, t(`r round(non_mpa_size_ttest$parameter, 0)`) = `r round(non_mpa_size_ttest$statistic, 1)`, p = `r round(non_mpa_size_ttest$p.value, 2)`, Cohen's d = `r round(non_mpa_size_effect$estimate, 2)`).  
+
 In 2012, mean lobster size in MPA sites was smaller than in non-MPA sites, and this difference was statistically significant with a moderate effect size (two-sample t-test, t(`r round(mpa_2012_ttest$parameter, 0)`) = `r round(mpa_2012_ttest$statistic, 1)`, p < 0.005, Cohen's d = `r round(mpa_2012_effect$estimate, 2)`). In 2018, mean lobster size was larger in MPAs than in non-MPAs, and that difference was statistically significant with a moderate effect size (two-sample t-test, t(`r round(mpa_2018_ttest$parameter, 0)`) = `r round(mpa_2018_ttest$statistic, 1)`, p < 0.001, Cohen's d = `r round(mpa_2018_effect$estimate, 2)`).
 
-#### Summary
+### Summary
 
 - Lobster abundance increased at all site from 2012 to 2018, with the biggest increases at MPA sites (Figure 1).
 - Lobster size increased at MPA sites from 2012 to 2018, but did not increase at non-MPA sites (Figure 2).
 - Mean lobster size was larger at non-MPA sites than at MPA sites in 2012, but in 2018, mean lobster size was greater at MPA sites than non-MPA sites (Table 1).
 
-#### References 
+### References 
 
 **Reed D. 2019.** SBC LTER: Reef: Abundance, size and fishing effort for California Spiny Lobster (Panulirus interruptus), ongoing since 2012. Environmental Data Initiative. https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0. Dataset accessed 10/30/2019.
 
