--- a/206_assignment_4.Rmd
+++ b/206_assignment_4.Rmd
@@ -37,7 +37,7 @@ lobster_mpa <- lobster_tidy %>%
 
 California spiny lobsters (*Panulirus interruptus*) are an important species in Southern California's coastal giant kelp forests (Figure 1). Additionally, California spiny lobsters are important in California's commercial and recreational fishing industry. In California, they were responsible for more than $15,000,000 in revenue in the 2015/16 season, and their price per pound more than doubled between 2005 and 2015 (Frimodig and Buck 2017). 
 
-In 2012, two sites in this study, Isla Vista and Naples, were established as Marine Protected Areas (MPAs). MPAs are meant to conserve, manage, and protect natural or cultural resources (NOAA 2018). Effective MPAs have been shown to more fish species and biomass than in normally fished areas (Edgar et al. 2014) and can benefit catch-rates for fisheries (Kerwath et al. 2013). In this study, we compare California spiny lobster samples from five sites on the Santa Barbara Coast from 2012-2018 to investigate how MPA status affects lobster abundance, community structure, and size.
+In 2012, two sites in this study, Isla Vista and Naples, were established as Marine Protected Areas (MPAs). MPAs are meant to conserve, manage, and protect natural or cultural resources (NOAA 2018). Effective MPAs have been shown to have more fish species and biomass than in normally fished areas (Edgar et al. 2014) and can benefit catch-rates for fisheries (Kerwath et al. 2013). In this study, we compare California spiny lobster samples from five sites on the Santa Barbara Coast from 2012-2018 to investigate how MPA status affects lobster abundance, community structure, and size.
 
 ![California spiny lobster (*Panulirus interruptus*). Credit: [Catalina Island Marine Institute](https://cimioutdoored.org/ca-spiny-lobster/)](lobster_image.jpg)
 
@@ -51,7 +51,7 @@ Changes in lobster abundance and shifts in lobster size distribution from 2012 t
 
 #### 1. Changes in annual lobster abundance.
 
-California Spiny Lobster abundance increased from 2012 to 2018 at all five sampling locations (Figure 2). The two MPA sites (Isla Vista and Naples) had the lowest lobster abundance in 2012 and the greatest percent increase in lobster abundance from 2012 to 2018. The number of lobsters observed at Isla Vista increased 36-fold from 26 in 2012 to 946 in 2018. At Naples, lobster abundance increased 49-fold from 6 lobsters in 2012 to 298 in 2018. 
+California spiny lobster abundance increased from 2012 to 2018 at all five sampling locations (Figure 2). The two MPA sites (Isla Vista and Naples) had the lowest lobster abundance in 2012 and the greatest percent increase in lobster abundance from 2012 to 2018. The number of lobsters observed at Isla Vista increased 36-fold, from 26 in 2012 to 946 in 2018. At Naples, lobster abundance increased 49-fold, from 6 lobsters in 2012 to 298 in 2018. 
 
 ```{r Part A: Changes in lobster abundance}
 # Part A: Changes in annual lobster abundance by site
@@ -79,7 +79,7 @@ ggplot(lobster_abundance,
   scale_size_manual(values = c(1.2, 0.5))+
   theme_classic()+
   theme_minimal()+
-  labs(x= "Year", y = "Lobsters abundance")+
+  labs(x= "Year", y = "Lobster abundance")+
   scale_x_continuous(breaks = seq(2012, 2018, 1), expand = c(0,0))+
   scale_y_continuous(breaks = seq(0, 1010, 200), expand = c(0,100))+
   coord_cartesian(clip = 'off')+
@@ -121,7 +121,7 @@ ggplot(lobster_abundance,
 
 ```
 
-***Figure 2.** California Spiny Lobster abundance in the Santa Barbara Channel from 2012 to 2018. Sites shown in turquoise were established as Marine Protected Areas (MPAs) in 2012.*
+***Figure 2.** California spiny lobster abundance in the Santa Barbara Channel from 2012 to 2018. Sites shown in turquoise were established as Marine Protected Areas (MPAs) in 2012.*
 
 #### 2. Shifts in lobster size distributions.
 
@@ -255,13 +255,14 @@ ggplot(data = lobster_size_dist, aes(x = size_mm,
 
 ```
 
-***Figure 3.** California Spiny Lobster size distributions in the Santa Barbara Channel in 2012 and 2018. Sites shown in turquoise were established as Marine Protected Areas (MPAs) in 2012. White lines indicate the median lobster size for each facet.*
+***Figure 3.** California spiny lobster size distributions in the Santa Barbara Channel in 2012 and 2018. Sites shown in turquoise were established as Marine Protected Areas (MPAs) in 2012. White lines indicate the median lobster size for each facet.*
 
-#### 3. Mean lobster size in MPA and non_MPA sites.
+
+#### 3. Mean lobster size in MPA and non-MPA sites.
 
 In addition to the lobster community size structure, mean lobster size was compared for MPA and non-MPA sites in 2012 and 2018 (Table 1).
 
-***Table 1.** California Spiny Lobster mean size, standard deviation, and sample size for samples collected in MPA and non-MPA sites in 2012 and 2018. MPA sites include Isla Vista and Naples and non-MPA sites include Arroyo Quemado, Carpinteria, and Mohawk.*
+***Table 1.** California spiny lobster mean size, standard deviation, and sample size for samples collected in MPA and non-MPA sites in 2012 and 2018. MPA sites include Isla Vista and Naples and non-MPA sites include Arroyo Quemado, Carpinteria, and Mohawk.*
 
 ```{r, message = FALSE, warning = FALSE}
 
@@ -317,7 +318,7 @@ kable(lobster_table_wide,
 
 ```
 
-Mean lobster size in MPA sites was  larger in 2018 (77.6 ± 11.7mm, mean ± standard deviation) compared to in 2012 (67.4 ± 12.2mm)  and the increase was statistically significant with a large effect size (two-sample t-test, t (`r round(mpa_size_ttest$parameter, 0)`) = `r round(mpa_size_ttest$statistic, 1)`, p < 0.0001, Cohen's d = `r round(mpa_size_effect$estimate, 2)`)). No significant change in mean lobster size was observed in sites that were not established as MPAs (Arroyo Quemado, Carpinteria, and Mohawk) between 2012 (74.9 ± 12.4mm) and 2018 (73.6 ± 10.1mm; two-sample t-test, t(`r round(non_mpa_size_ttest$parameter, 0)`) = `r round(non_mpa_size_ttest$statistic, 1)`, p = `r round(non_mpa_size_ttest$p.value, 2)`, Cohen's d = `r round(non_mpa_size_effect$estimate, 2)`).  
+Mean lobster size in MPA sites was  larger in 2018 (77.6 ± 11.7mm, mean ± standard deviation) compared to 2012 (67.4 ± 12.2mm)  and the increase was statistically significant with a large effect size (two-sample t-test, t (`r round(mpa_size_ttest$parameter, 0)`) = `r round(mpa_size_ttest$statistic, 1)`, p < 0.0001, Cohen's d = `r round(mpa_size_effect$estimate, 2)`)). No significant change in mean lobster size was observed in sites that were not established as MPAs (Arroyo Quemado, Carpinteria, and Mohawk) between 2012 (74.9 ± 12.4mm) and 2018 (73.6 ± 10.1mm; two-sample t-test, t(`r round(non_mpa_size_ttest$parameter, 0)`) = `r round(non_mpa_size_ttest$statistic, 1)`, p = `r round(non_mpa_size_ttest$p.value, 2)`, Cohen's d = `r round(non_mpa_size_effect$estimate, 2)`).  
 
 In 2012, mean lobster size in MPA sites was smaller than in non-MPA sites, and this difference was statistically significant with a moderate effect size (two-sample t-test, t(`r round(mpa_2012_ttest$parameter, 0)`) = `r round(mpa_2012_ttest$statistic, 1)`, p = `r round(mpa_2012_ttest$p.value, 4)` , Cohen's d = `r round(mpa_2012_effect$estimate, 2)`). In 2018, mean lobster size was larger in MPAs than in non-MPAs, and that difference was statistically significant with a moderate effect size (two-sample t-test, t(`r round(mpa_2018_ttest$parameter, 0)`) = `r round(mpa_2018_ttest$statistic, 1)`, p < 0.0001, Cohen's d = `r round(mpa_2018_effect$estimate, 2)`).
 
@@ -325,7 +326,7 @@ In 2012, mean lobster size in MPA sites was smaller than in non-MPA sites, and t
 
 - Lobster abundance increased at all sites from 2012 to 2018, with the largest increases at MPA sites (Figure 2).
 - Median lobster size increased at MPA sites from 2012 to 2018, but did not increase at non-MPA sites (Figure 3).
-- Mean lobster size was larger at non-MPA sites than at MPA sites in 2012, but in 2018, mean lobster size was greater at MPA sites than non-MPA sites (Table 1).
+- Mean lobster size was greater at non-MPA sites than at MPA sites in 2012, but in 2018, mean lobster size was greater at MPA sites than non-MPA sites (Table 1).
 
 ### References 
 
